deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: horrible-stats
  namespace: horrible-stats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
        run: horrible-stats
    spec:
      containers:
      - name: app
        image: gcr.io/dcs-analytics-257714/horrible_stats:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: dcs-storage-gcs
          mountPath: "/etc/keys/"
          readOnly: true
    #   volumes:
    #   - name: dcs-storage-gcs
    #     secret:
    #       secretName: dcs-storage-gcs

      - name: stat-updater
        image: gcr.io/dcs-analytics-257714/horrible_stats:latest
        command: ["python", "file_updater.py"]
        args: ["--prefix", "mission-stats", "--interval", "120"]
        volumeMounts:
        - name: dcs-storage-gcs
          mountPath: "/etc/keys/"
          readOnly: true

      - name: event-updater
        image: gcr.io/dcs-analytics-257714/horrible_stats:latest
        command: ["python", "file_updater.py"]
        args: ["--prefix", "mission-events", "--interval", "120"]
        volumeMounts:
        - name: dcs-storage-gcs
          mountPath: "/etc/keys/"
          readOnly: true

      volumes:
      - name: dcs-storage-gcs
        secret:
          secretName: dcs-storage-gcs

---
  apiVersion: v1
  kind: Service
  metadata:
    namespace: horrible-stats
    name: app
    labels:
      app: app
  spec:
    type: LoadBalancer
    loadBalancerIP: "35.226.240.39"
    ports:
      - port: 80
        targetPort: 80
        name: http
      - port: 443
        targetPort: 80
        name: https
    selector:
      app: app
