deployment_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: horrible-stats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: gcr.io/dcs-analytics-257714/horrible_stats_db:latest
        ports:
        - containerPort: 5432
      #   volumeMounts:
      #   - name: db-disk
      #     mountPath: /var/lib/postgresql/data
      # volumes:
      # - name: db-disk
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: db
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: db-disk
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 50Gi
