service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: horrible-stats
  name: app
  labels:
    app: app
spec:
  type: LoadBalancer
  loadBalancerIP: "35.226.240.39"
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 443
      targetPort: 80
      name: https
  selector:
    app: app
